--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -31,6 +31,13 @@ ul {
     margin-top: 1rem!important;
 }
 
+.page-heading {
+    display: block;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+}
 
 
 // Import only what you need from Bulma
