--- a/src/app/Leaderboard/Leaderboard.scss
+++ b/src/app/Leaderboard/Leaderboard.scss
@@ -1,15 +1,41 @@
-.scores {
+.leaderboard {
+
     display: flex;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+    .card { 
+        margin-left: 2rem;
+        margin-right: 2rem;
+        min-width: 20rem;
+        max-width: 32rem;
+        width:auto;
+        flex-grow: 1;
+    }
+
+    table {
+        width: 100%;
+    }
+
+    .heading {
+        white-space: nowrap;
+    }
+    
+   
+
+    .title {
+    
+        white-space: nowrap;
+    }
+
+    .leaderboard-list .title {
+        font-size: 1.0rem;
+    }
 }
 
-ol {
-    font-size: 2rem;
-    padding-left: 2rem;
-}
 
-.card {
-    width: 100%;
-}
+
+
+
 
