Roster is now a wordcloud

--- a/src/app/Roster/Roster.scss
+++ b/src/app/Roster/Roster.scss
@@ -1,5 +1,13 @@
-.challengers {
+
+.roster {
     display: flex;
     margin-left: 2rem;
     margin-right: 2rem;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+.challengers {
+
+}
+
 }
