--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -31,6 +31,10 @@ ul {
     margin-top: 1rem!important;
 }
 
+h1 {
+    font-size: 1.5rem;
+}
+
 .page-heading {
     display: block;
     font-size: 1.2rem;
