Going a new direction with styles exploring tailwind.css

--- a/src/app/Roster/Roster.scss
+++ b/src/app/Roster/Roster.scss
@@ -6,8 +6,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-.challengers {
-
-}
+    
+    .challengers {  
+        width: 100%;
+    }
 
 }
